Add github link and change beta banner

--- a/lib/foot.html
+++ b/lib/foot.html
@@ -1,7 +1,7 @@
 </section>
 </div>
 
-<div class="alert alert-info" role="alert"><strong>Beta Site</strong> The site is still in beta testing phase. Some features may not work correctly (or at all).</div>
+<div class="alert alert-info" role="alert"><strong>Production Beta Site</strong> Some features may break unexpectedly</div>
 <div class="navbar navbar-default navbar-static-bottom" role="navigation">
   <div class="container">
     <div class="navbar-header">
@@ -18,6 +18,8 @@
         <li><a href="http://www.blazerobotics.org/contact-us.html">Contact Us</a></li>
         <li><a href="http://blazerobotics.org">&copy; Team 3184 (Blaze Robotics) 2016</a></li>
         <li><a href="http://nickschatz.com">Made by Nick Schatz</a></li>
+        <li><a href="https://github.com/FRC3184/partexchange"><img src="/css/github-mark.svg" alt="GitHub"
+                                                                   height="20px" width="20px" /></a></li>
         <li class="dropdown dropup">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Donate<b class="caret"></b></a>
           <ul class="dropdown-menu">
