Update year and change team name to comply with branding standards

--- a/lib/foot.html
+++ b/lib/foot.html
@@ -16,7 +16,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/">Home</a></li>
         <li><a href="http://www.blazerobotics.org/contact-us.html">Contact Us</a></li>
-        <li><a href="http://blazerobotics.org">&copy; Team 3184 (Blaze Robotics) 2016</a></li>
+        <li><a href="http://blazerobotics.org">&copy; Team 3184 Blaze Robotics 2017</a></li>
         <li><a href="http://nickschatz.com">Made by Nick Schatz</a></li>
         <li><a href="https://github.com/FRC3184/partexchange"><img src="/css/github-mark.svg" alt="GitHub"
                                                                    height="20px" width="20px" /></a></li>
