Update TOS to note that team data are visible to anyone.

--- a/_tos.html
+++ b/_tos.html
@@ -11,7 +11,7 @@
 <ol>
   <li>The site was created with the intent to provide FRC teams with a dedicated service to exchange parts, tools, and services. Any use of this site that is not covered by this intent is forbidden.</li>
   <li>Any misuse of the site will be removed and the offending account sent a warning. Repeated infractions will cause the offending account to be terminated permanently. Team 3184 Blaze Robotics reserves the right to remove posts and accounts at their discretion.</li>
-  <li>Your team number, associated email, profile picture, and Twitter handle are visible to any user that creates a verified account on the site. Your part requests and images are visible to anyone who can access the site. Team 3184 Blaze Robotics may use this information to contact individual teams, and teams en masse. Your data will never be sold or otherwise redistributed.</li>
+  <li>Your team number, associated email, profile picture, Twitter handle, and other team data are visible to anyone that can access the site. Your part requests and images are visible to anyone who can access the site. Team 3184 Blaze Robotics may use this information to contact individual teams, and teams en masse. Your data will never be sold or otherwise redistributed.</li>
   <li>You may opt out of email communications at any time. You reserve the right to delete your account upon formal written request to Team 3184 Blaze Robotics.</li>
 </ol>
 </p>
